--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@ html,body{
         <div class="folder-container">
           <a href="-" 
              class="folder-item" 
-             data-tooltip="-comming soon-">
+             data-tooltip="-">
             <img src="https://files.catbox.moe/vhrdt1.png" alt="under_dev_work_folder" class="folder-icon">
-            <span class="folder-name">under_dev_work_folder</span>
+            <span class="folder-name">under_dev_work_folder_-coming-soon-</span>
           </a>
         </div>
       </div>
@@ -489,3 +489,4 @@ draw();
 </script>
 </body>
 </html>
+
