--- a/index.html
+++ b/index.html
@@ -426,14 +426,14 @@ html,body{
 
     <!-- FOLDERS PANEL -->
     <div class="panel">
-      <h2>JanitorAI Character's Special Folder:</h2>
+      <h2>Character's Special M.R.I.S. Folder:</h2>
       <div class="panel-content">
         <div class="folder-container">
           <a href="-" 
              class="folder-item" 
-             data-tooltip="-">
+             data-tooltip="">
             <img src="https://files.catbox.moe/vhrdt1.png" alt="under_dev_work_folder" class="folder-icon">
-            <span class="folder-name">under_dev_work_folder_-coming-soon-</span>
+            <span class="folder-name">Dev_Seq_folder (Coming Soon)</span>
           </a>
         </div>
       </div>
@@ -489,4 +489,5 @@ draw();
 </script>
 </body>
 </html>
+
 
