--- a/index.html
+++ b/index.html
@@ -640,6 +640,7 @@
                         <li class="bot-type-item">Horror | Analog-Horror</li>
                         <li class="bot-type-item">Mythical Interesting Creatures</li>
                         <li class="bot-type-item">Fantasy Mythical Creatures</li>
+                        <li class="bot-type-item">Fictional TOP-SECRET Organisations</li>
                         <li class="bot-type-item">Some Types of Paranormal Creatures</li>
                     </ul>
                 </div>
@@ -647,7 +648,7 @@
                 <!-- Folders Section -->
                 <div class="content-section">
                     <h2 class="section-title">CLASSIFIED FOLDERS (Additional)</h2>
-                    <p>Restricted access directories containing specialized character data:</p>
+                    <p>contains specialized (Detailed) character data in a fictional secret russian organisation called (M.R.I.S):</p>
                     
                     <div class="folder-container">
                         <a href="#" class="folder-item" data-tooltip="UNDER DEVELOPMENT - COMING SOON">
@@ -659,7 +660,7 @@
             </div>
             
             <div class="terminal-footer">
-                SYSTEM STATUS: ONLINE | TERMINAL ACTIVE | © OBSCURE © (2022–2025)
+                © OBSCURE © (2022–2025)
             </div>
         </div>
     </div>
@@ -831,3 +832,4 @@
     </script>
 </body>
 </html>
+
