--- a/index.html
+++ b/index.html
@@ -647,13 +647,13 @@
                 
                 <!-- Folders Section -->
                 <div class="content-section">
-                    <h2 class="section-title">CLASSIFIED FOLDERS (Additional)</h2>
-                    <p>contains specialized (Detailed) character data in a fictional secret russian organisation called (M.R.I.S):</p>
+                    <h2 class="section-title">Additional </h2>
+                    <p>contains specialized (Detailed) character data in a fictional secret soviet organization called (M.R.I.S):</p>
                     
                     <div class="folder-container">
                         <a href="#" class="folder-item" data-tooltip="UNDER DEVELOPMENT - COMING SOON">
-                            <img src="https://files.catbox.moe/vhrdt1.png" alt="Development Folder" class="folder-icon">
-                            <span>Dev_Seq_folder (CLASSIFIED)</span>
+                            <img src="https://files.catbox.moe/d6n9x1.png" alt="Development Folder" class="folder-icon">
+                            <span>Dev_Seq_Terminal (COMING SOON!)</span>
                         </a>
                     </div>
                 </div>
@@ -832,4 +832,5 @@
     </script>
 </body>
 </html>
+
 
