--- a/index.html
+++ b/index.html
@@ -629,13 +629,13 @@
                 
                 <!-- About Section -->
                 <div class="content-section">
-                    <h2 class="section-title">SYSTEM PROFILE</h2>
+                    <h2 class="section-title">About This Account: </h2>
                     <p>This account creates characters that contain a special kind of story in them. Each one has its own background and scenario. I create different types of bots, but mostly I'm interested in horror ones, yet ones that have an interesting, yet deep and mysterious story. So if you like these kinds of Characters, then you're in the right profile.<span class="blinking-cursor"></span></p>
                 </div>
                 
                 <!-- Bot Types Section -->
                 <div class="content-section">
-                    <h2 class="section-title">ENTITY CLASSIFICATIONS</h2>
+                    <h2 class="section-title">Characters i do: </h2>
                     <ul class="bot-types">
                         <li class="bot-type-item">Horror | Analog-Horror</li>
                         <li class="bot-type-item">Mythical Interesting Creatures</li>
@@ -832,5 +832,6 @@
     </script>
 </body>
 </html>
+
 
 
