--- a/index.html
+++ b/index.html
@@ -586,15 +586,15 @@
         <!-- Terminal Interface -->
         <div class="terminal">
             <div class="terminal-header">
-                <h1 class="system-title glitch" data-text="OBSCURE SYSTEM TERMINAL">OBSCURE SYSTEM TERMINAL</h1>
-                <p class="system-subtitle">AI Character Development & Digital Creation Interface</p>
+                <h1 class="system-title glitch" data-text="OBSCURE SYSTEM TERMINAL">Welcome To OBSCURE WEBSITE</h1>
+                <p class="system-subtitle"></p>
             </div>
             
             <div class="terminal-content">
                 <!-- Profile Section -->
                 <div class="content-section profile-section">
                     <img src="https://ella.janitorai.com/media-approved/wddSCytJpQ3wt-imU5NQB.webp" alt="OBSCURE" class="profile-img">
-                    <h2 class="section-title">SYSTEM OPERATOR: OBSCURE</h2>
+                    <h2 class="section-title">@OBSCURE</h2>
                     <p>AI Bot creator, Graphic Designer, and video editor<span class="blinking-cursor"></span></p>
                 </div>
                 
@@ -832,6 +832,7 @@
     </script>
 </body>
 </html>
+
 
 
 
