--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 
                 <!-- Accounts Section -->
                 <div class="content-section">
-                    <h2 class="section-title">ACCESS POINTS</h2>
+                    <h2 class="section-title">ACCESS POINTS: </h2>
                     <p>Direct connections to my digital presence:</p>
                     
                     <div class="accounts-grid">
